--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'eclipse'
 }
 
-version = '0.16.3'
+version = '0.16.3-TSEC'
 
 dependencies {
     api 'org.bouncycastle:bcprov-jdk15to18:1.73'
@@ -90,7 +90,7 @@ publishing {
             artifact javadocJar
 
             pom {
-                description = 'A Java Bitcoin library'
+                description = 'A Java 10Seconds library'
             }
         }
     }
