--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'eclipse'
 }
 
-version = '1.0.0'
+version = '1.0.0-tsec'
 
 dependencies {
     api 'org.bouncycastle:bcprov-jdk15to18:1.73'
